kubernetes/reco-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reco-postgres
  labels:
    app: reco-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reco-postgres
  template:
    metadata:
      labels:
        app: reco-postgres
    spec:
      containers:
        - name: reco-postgres
          image: pgvector/pgvector:pg16
          ports:
            - containerPort: 5432
