kubernetes/recommendation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
  labels:
    app: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: recommendation-service:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
            - containerPort: 50054
