kubernetes/reco-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reco-postgres
spec:
  selector:
    app: reco-postgres
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
