kubernetes/recommendation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
spec:
  selector:
    app: recommendation
  ports:
    - name: http
      protocol: TCP
      port: 8004
      targetPort: 8004
    - name: grpc
      protocol: TCP
      port: 50054
      targetPort: 50054
  type: ClusterIP
