kubernetes/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: coursematch
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 8080
      nodePort: 30080
