kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursematch-ingress
  namespace: coursematch
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: coursematch.local
      http:
        paths:
          # user-service
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080

          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080

          # course-service
          - path: /api/courses
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8081

          - path: /api/enrollments
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8081

          - path: /api/metrics
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 8081

          # recommendation-service
          - path: /api/recommendations
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 8004

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: recommendation-service
                port:
                  number: 8004
